Fix autoupdates check.